--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -1,3 +1,30 @@
 /* =============
     section2
 ============= */
+#section-2{
+    
+    img{
+        width: 100%;
+    };
+
+    #section-2-container{
+        display: grid;
+        grid-template-columns: 15px auto 15px;
+        grid-template-areas:
+        ". d1 ."
+        ". c ."
+        ". d2 .";
+    
+        #divider1{
+            grid-area: d1;
+        }
+
+        #section-2-content{
+            grid-area: c;
+        }
+        
+        #divider2{
+            grid-area: d2;
+        }
+    }
+}
