--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -3,7 +3,13 @@
 ============= */
 
 #section-5{
-    img{
-        width: 100%;
+
+    display: grid;
+        grid-template-columns: 15px auto 15px;
+        grid-template-areas: 
+        ". content .";
+
+    #section-5-content{
+        grid-area: content;
     }
 }
