--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -3,7 +3,15 @@
 ============= */
 
 #section-4{
-    img{
-        width: 100%;
+    
+    #gallery{
+        display: grid;
+        gap:20px;
+
+        li{
+            img{
+                width: 100%;
+            }
+        }
     }
 }
