--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -6,7 +6,7 @@
 
 // Base Styles
 @import "base/_normalize";
-@import "base/base";
+@import "base/_base";
 @import "base/_typography";
 
 // Components Styles
