--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -20,6 +20,7 @@
 
         #section-3-content{
             grid-area: c;
+            text-align: center;
         }
         
         #divider2{
