--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -15,6 +15,8 @@
     
         #date{
             grid-area: date;
+            text-align: right;
+            padding-right: 10px;
         }
     }
     
