--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -21,6 +21,7 @@
 
         #section-2-content{
             grid-area: c;
+            text-align: center;
         }
         
         #divider2{
