--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -17,6 +17,8 @@
     
         #divider1{
             grid-area: d1;
+            height: 2px;
+            border-color: #9F8273;
         }
 
         #section-2-content{
