--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -16,7 +16,7 @@
         #date{
             grid-area: date;
             text-align: right;
-            padding-right: 10px;
+            padding-right: 15%;
         }
     }
     
