--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -389,9 +389,7 @@ textarea {
   grid-template-columns: 15px auto 15px;
   grid-template-areas: ". d1 ." ". c ." ". d2 ."; }
   #section-2 #section-2-container #divider1 {
-    grid-area: d1;
-    height: 2px;
-    border-color: #9F8273; }
+    grid-area: d1; }
   #section-2 #section-2-container #section-2-content {
     grid-area: c;
     text-align: center; }
