--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -8,9 +8,37 @@
         display: grid;
         gap:20px;
 
+        @include md{
+            display: grid;
+            gap:20px;
+            grid-template-columns: 50% 50%;
+            grid-template-areas: 
+            "g1 g1"
+            "g2 g3"
+            ;
+        }
+
         li{
             img{
                 width: 100%;
+            }
+
+            #g1{
+                @include md{
+                    grid-area: g1;
+                }
+            }
+            
+            #g2{
+                @include md{
+                    grid-area: g2;
+                }
+            }
+
+            #g3{
+                @include md{
+                    grid-area: g3;
+                }
             }
         }
     }
