--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -5,11 +5,84 @@
 #section-5{
 
     display: grid;
-        grid-template-columns: 15px auto 15px;
-        grid-template-areas: 
-        ". content .";
+    grid-template-columns: 15px auto 15px;
+    grid-template-areas: 
+    ". section-5-img-container ."
+    ". section-5-text-container .";
 
-    #section-5-content{
-        grid-area: content;
+    @include xl{
+        grid-template-columns: auto 1200px auto;
     }
+
+    @include md{
+        display: grid;
+        grid-template-columns: 12% auto 12%;
+        grid-template-areas: 
+        ". section-5-img-container ."
+        ". section-5-text-container .";
+    }
+
+    @include lg{
+        display: grid;
+        grid-template-columns: 30% auto;
+        grid-template-areas: 
+        "section-5-img-container section-5-text-container";
+    }
+
+    #section-5-img-container{
+        grid-area: section-5-img-container;
+
+        @include md{
+            grid-area: section-5-img-container;
+            
+            display: grid;
+            grid-template-columns: 140px auto 140px;
+            grid-template-areas: ". section-5-img .";
+        }
+
+        @include lg{
+            grid-area: section-5-img-container;
+
+            display: grid;
+            grid-template-columns: 15px auto 15px;
+            grid-template-areas: ". section-5-img .";
+        }
+        
+        #section-5-img{
+            width: 100%;
+            grid-area: section-5-img;
+            
+            @include md{
+                grid-area: section-5-img;
+            }
+
+            @include lg{
+                grid-area: section-5-img;
+            }
+        }
+    }
+
+    #section-5-text-container{
+        grid-area: section-5-text-container;
+        @include lg{
+            grid-area: section-5-text-container;
+            
+            display: grid;
+            grid-template-columns: 20% auto 20%;
+            grid-template-areas: ". section-5-text .";
+        }
+
+        @include md{
+            grid-area: section-5-text-container;
+        }
+
+        #section-5-text{
+            grid-area: section-5-text;
+
+            @include lg{
+                grid-area: section-5-text;
+            }
+        }
+    }
+    
 }
