--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -7,23 +7,37 @@
         width: 100%;
     };
     #section-3-container{
+
+        @include xl{
+            grid-template-columns: auto 1200px auto;
+        }
+    
         display: grid;
         grid-template-columns: 15px auto 15px;
         grid-template-areas:
         ". d1 ."
         ". c ."
         ". d2 .";
-    
+        
         @include md{
+            display: grid;
+            grid-template-columns: 10% auto 10%;
+            grid-template-areas:
+            ". d1 ."
+            ". c ."
+            ". d2 .";
+        }
+
+        @include lg{
             display: grid;
             grid-template-columns: 20% auto 20%;
             grid-template-areas:
             ". d1 ."
             ". c ."
             ". d2 .";
-    
         }
-        #divider1{
+
+        #section-3-divider1{
             grid-area: d1;
         }
 
@@ -32,7 +46,7 @@
             text-align: center;
         }
         
-        #divider2{
+        #section-3-divider2{
             grid-area: d2;
         }
     }
